--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "babel-loader": "^5.3.2",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.1",
-    "webpack": "^1.11.0"
+    "react-hot-loader": "^1.2.8",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "react": "^0.13.3"
