--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --progress --colors",
+    "start": "webpack-dev-server --hot --inline --progress --color",
     "build": "webpack --progress --colors"
   },
   "repository": {
@@ -21,7 +21,6 @@
   "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
-    "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.1",
     "react-hot-loader": "^1.2.8",
     "react-router": "^0.13.3",
