--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "babel-loader": "^5.3.2",
     "html-webpack-plugin": "^1.6.1",
     "react-hot-loader": "^1.2.8",
-    "react-router": "^0.13.3",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-router": "^0.13.3"
   }
 }
